--- a/src/app/add-items/drink-items/drink-items.component.html
+++ b/src/app/add-items/drink-items/drink-items.component.html
@@ -1,1 +1,13 @@
-<p>drink-items works!</p>
+<div class="card mb-3" style="max-width: 540px;cursor: pointer" *ngFor="let drink of drinkItems let i = index">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img [src]="drink.imageUrl" [alt]="drink.name">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body pl-1 px-1">
+        <h5 class="card-title">{{ drink.name }}</h5>
+        <p class="card-text">Price: {{ drink.price }} KGS</p>
+      </div>
+    </div>
+  </div>
+</div>
