--- a/src/app/add-items/drink-items/drink-items.component.html
+++ b/src/app/add-items/drink-items/drink-items.component.html
@@ -1,6 +1,6 @@
-<div class="card mb-3" style="max-width: 540px;cursor: pointer" *ngFor="let drink of drinkItems let i = index">
+<div class="card mb-3 foodCard" style="max-width: 540px;cursor: pointer" *ngFor="let drink of drinkItems let i = index">
   <div class="row no-gutters">
-    <div class="col-md-4">
+    <div class="col-md-4  pt-2 ">
       <img [src]="drink.imageUrl" [alt]="drink.name">
     </div>
     <div class="col-md-8">
