on Click items increase the number

--- a/src/app/add-items/add-items.component.html
+++ b/src/app/add-items/add-items.component.html
@@ -3,10 +3,10 @@
     <legend>Add Items</legend>
     <div class="row">
       <div class="col-7 pr-2">
-        <app-food-items [foodItems]="foodItems"></app-food-items>
+        <app-food-items [foodItems]="foodItems" (addFoodItems)="onAddFoodItems($event)"></app-food-items>
       </div>
       <div class="col-5 pl-2">
-        <app-drink-items [drinkItems] = drinkItems></app-drink-items>
+        <app-drink-items [drinkItems] = drinkItems (addDrinks)="onAddDrinks($event)"></app-drink-items>
       </div>
     </div>
   </fieldset>
