--- a/src/app/order-details/detail/detail.component.html
+++ b/src/app/order-details/detail/detail.component.html
@@ -1,1 +1,16 @@
-<p>detail works!</p>
+<div *ngFor="let item of foodsItem let i = index">
+  <div *ngIf="item.number > 0" class="p-2 row">
+    <span class="col-3">{{ item.name }}</span>
+    <span class="col-3">x {{ item.number }}</span>
+    <span class="col-3">{{ item.price }} KGS</span>
+    <button (click)="onDeleteFoodsItem(i)" class="border-0 col-2">X</button>
+  </div>
+</div>
+<div  *ngFor="let item of drinksItem let i = index">
+  <div *ngIf="item.number > 0" class="row p-2" >
+    <span class="col-3">{{ item.name }}</span>
+    <span class="col-3">x {{ item.number }}</span>
+    <span class="col-3">{{ item.price }} KGS</span>
+    <button (click)="onDeleteDrinksItem(i)" class="border-0 col-2">X</button>
+  </div>
+</div>
